SFUSA/force-app/main/default/objects/Calendar_Values__c/fields/Color_Code__c.field-meta.xml
<CustomField>
        <fullName>Color_Code__c</fullName>
        <description>This Field will store the chart color code of any picklist value</description>
        <label>Color Code</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>