SFUSA/force-app/main/default/objects/Calendar_Values__c/fields/Count__c.field-meta.xml
<CustomField>
        <fullName>Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>