SFUSA/force-app/main/default/objects/Calendar_Values__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Setting__c</columns>
        <columns>Value__c</columns>
        <columns>IsData__c</columns>
        <columns>Color_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>